# sex_offender_importer

./: .gitignore  Cargo.toml  Session.vim
$VIMDATA/: %home%d-rezzer%.ideavimrc
sql/: AL_select.sql  KS_select  MT_select.sql  TN_select.sql  Texas_tables.sql  The_big_query.sql  ak_import.sql  al_import.sql  ar_import.sql  ar_import_template.sql  az_import.sql  az_import_template.sql  ca_import.sql  co_import.sql  config.sqlite  create_master.sql  create_sexoffender.sql  ct_import.sql  dateOfBirthConversion.sql  de_import.sql  fl_import.sql  formatDateOfBirth.sql  formatPhotoNames.sql  full_db.sql  ga_import.sql  hi_import.sql  ia_import.sql  id_import.sql  il_import.sql  importer.sqlite  in_import.sql  ks_import.sql  ky_import.sql  la_import.sql  ma_import.sql  main_states.sql  md_import.sql  me_import.sql  mi_import.sql  mn_import.sql  (+27 more)
src/: .#main.rs  config.rs  consts.rs  downloader.rs  extractor.rs  importer.rs  lib.rs  main.rs  sexoffender.rs  texas_shuffle.rs  types.rs  util.rs
src/downloader/: archives.rs  mod.rs  records.rs
src/extractors/: mod.rs
src/importer/: csv.rs  csv_extractor.rs  csv_importer.rs  extracts.rs  img.rs  mod.rs  util.rs
src/sex_offender/: downloader.rs  importer.rs  mod.rs
~/.vim/undodir/: %Users%ryan%dev%sex_offender%sex_offender_importer%Cargo.toml  %Users%ryan%dev%sex_offender%sex_offender_importer%src%bin%sximp.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%config.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%downloader%archives.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%downloader%mod.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%downloader%records.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%extractors%extracted_file.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%extractors%mod.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%importer%csv_importer.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%importer%img.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%importer%mod.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%lib.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%states.rs  %Users%ryan%dev%sex_offender%sex_offender_importer%src%util.rs
