[package]
name = "sex_offender"
version = "0.1.0"
authors = ["d-rezzer <d-rezzer@brightblade.io>"]
edition = "2018"

[dependencies]
ftp = "3.0.1"
zip = "0.5.2"
csv = "1.0.7"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
serde_rusqlite = "0.20.0"
bytes = "0.4"
chrono = "0.4.6"
quicli = "0.4"
structopt = "0.2"
log = "0.4"
rand = "0.7.0"
env_logger = "0.6.2"
failure = "0.1.5"
exitfailure = "0.5.1"
mktemp = "0.4.0"
regex = "1"
lazy_static = "1.4.0"
[dependencies.rusqlite]
version = "0.19.0"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
