[package]
name = "sex_offender"
version = "0.1.0"
authors = ["d-rezzer <d-rezzer@brightblade.io>"]
edition = "2021"

[dependencies]
ftp = "3.0.1"
zip = "0.6.2"
#zip = "0.5.2"
#csv = "1.0.7"
csv = "1.1.6"
serde = { version="1.0", features=["derive"] }
serde_derive = "1.0.92"
serde_json = "1.0"
#serde_rusqlite = "0.20.0"
serde_rusqlite = "0.30.1"
#bytes = "0.4"
bytes = "1.1"
#chrono = "0.4.6"
chrono = "0.4.19"

#structopt = "0.2"
structopt = "0.3.26"
#indicatif = "0.13.0"
indicatif = "0.16.2"
#console = "0.9.1"
console = "0.15.0"
prettytable-rs = "^0.8"
log = "0.4"
#rand = "0.7.0"
rand = "0.8.5"
#env_logger = "0.6.2"
env_logger = "0.9.0"
#failure = "0.1.5"
failure = "0.1.8"
exitfailure = "0.5.1"
#mktemp = "0.4.0"
mktemp = "0.4.1"
regex = "1"
lazy_static = "1.4.0"
[dependencies.rusqlite]
#version = "0.19.0"
version = "0.27.0"
features = ["bundled"]

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
tempfile = "3.1.0"
